<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andorid="http://schemas.android.com/apk/res-auto"

    >

    <item
        andorid:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:enabled="true"
       />
    <item
        andorid:id="@+id/ic_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        android:enabled="true"/>
    <item
        andorid:id="@+id/ic_goals"
        android:icon="@drawable/ic_goals"
        android:title="@string/weekly_goals"
        android:enabled="true"/>
    <item
        andorid:id="@+id/ic_leaderboard"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/leaderboard"
        android:enabled="true"/>

</menu>