<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SportPickerActivity">

    <TextView
        android:id="@+id/title_soprtsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/intervalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_duration_of_the_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/invocationTextView"
        android:layout_width="320dp"
        android:layout_height="64dp"
        android:text="@string/please_enter_the_details_of_your_activity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_soprtsTextView"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/kmsTextView2"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:text="@string/the_lenght_of_the_activity_in_kilometers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervalTextView"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/durationEditText"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toEndOf="@+id/intervalTextView"
        app:layout_constraintTop_toBottomOf="@+id/invocationTextView"
        app:layout_constraintVertical_bias="0.103"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/kmEditText"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/kmsTextView2"
        app:layout_constraintTop_toBottomOf="@+id/durationEditText"
        app:layout_constraintVertical_bias="0.061"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>